--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "gen": "deno run --env -A main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
